--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME='WRSOS Volunteer Portal Dev'
 APP_ENV=production
 APP_KEY=base64:2qypJZMyqGB7R7kbDEWW6OebpGJX2TlY/x+roZd5urY=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_LOG_LEVEL=production
 APP_URL=http://www.wrsosvolunteersdev.ca
 
